// Enabler proto 3 istedet for 2
syntax = "proto3";

// Stores Autogenered code from .proto file
package com.studentApplicationGRpc.stubs.student;

// With this line, I am saying that create multiple classes rather than a single class
option java_multiple_files = true;

// This is the request message where it takes an id to find data
message StudentGRpcRequest{
    int64 studentId = 1;
}

// This is the response message
message StudentGRpcResponse{
    int64 studentId = 1;
    string studentName = 2;
    string studentMail = 3;

}

// This defines our service for the target folder
service StudentGRpcService{
    rpc getStudentInfo(StudentGRpcRequest) returns (StudentGRpcResponse);
}